sumo/tests/traci/VariableRetrieval/Junction/errors/UnknownID/testclient.prog
simstep2 5
getvariable 0xa9 0x42 xxx
simstep2 6
